--- a/back/build.gradle
+++ b/back/build.gradle
@@ -30,7 +30,10 @@ dependencies {
 
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // Jackson serializer 사용 시
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+	implementation 'com.clickhouse:clickhouse-jdbc:0.4.6'
+	implementation 'com.clickhouse:clickhouse-http-client:0.4.6'
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
