--- a/back/build.gradle
+++ b/back/build.gradle
@@ -42,7 +42,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
+	implementation 'org.lz4:lz4-java:1.8.0'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
 
